// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change text color to textColor when using color & textColor prop 1`] = `
<div class="van-loading van-loading--circular">
  <span class="van-loading__spinner van-loading__spinner--circular"
        style="color: green;"
  >
    <svg class="van-loading__circular"
         viewbox="25 25 50 50"
    >
      <circle cx="50"
              cy="50"
              r="20"
              fill="none"
      >
      </circle>
    </svg>
  </span>
  <span class="van-loading__text"
        style="color: red;"
  >
    Loading Text
  </span>
</div>
`;

exports[`should change text color when using color prop 1`] = `
<div class="van-loading van-loading--circular">
  <span class="van-loading__spinner van-loading__spinner--circular"
        style="color: green;"
  >
    <svg class="van-loading__circular"
         viewbox="25 25 50 50"
    >
      <circle cx="50"
              cy="50"
              r="20"
              fill="none"
      >
      </circle>
    </svg>
  </span>
  <span class="van-loading__text"
        style="color: green;"
  >
    Loading Text
  </span>
</div>
`;

exports[`should change text color when using text-color prop 1`] = `
<div class="van-loading van-loading--circular">
  <span class="van-loading__spinner van-loading__spinner--circular">
    <svg class="van-loading__circular"
         viewbox="25 25 50 50"
    >
      <circle cx="50"
              cy="50"
              r="20"
              fill="none"
      >
      </circle>
    </svg>
  </span>
  <span class="van-loading__text"
        style="color: red;"
  >
    Loading Text
  </span>
</div>
`;
